--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ black = "^24.4.2"
 flakeheaven = "^3.3.0"
 pydantic-settings = "^2.3.4"
 aiohttp = "^3.9.5"
+pytest = "^8.3.1"
 
 [tool.black]
 line-length = 90
