--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ flakeheaven = "^3.3.0"
 pydantic-settings = "^2.3.4"
 aiohttp = "^3.9.5"
 pytest = "^8.3.1"
+pymongo = "^4.8.0"
 
 [tool.black]
 line-length = 90
