--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pydantic-settings = "^2.3.4"
 aiohttp = "^3.9.5"
 pytest = "^8.3.1"
 pymongo = "^4.8.0"
+cachetools = "^5.5.0"
 
 [tool.black]
 line-length = 90
