--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ aiohttp = "^3.9.5"
 pytest = "^8.3.1"
 pymongo = "^4.8.0"
 cachetools = "^5.5.0"
+cryptography = "^43.0.1"
+openai = "^1.48.0"
 
 [tool.black]
 line-length = 90
