--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ pymongo = "^4.8.0"
 cachetools = "^5.5.0"
 cryptography = "^43.0.1"
 openai = "^1.48.0"
+tiktoken = "^0.7.0"
 
 [tool.black]
 line-length = 90
