--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,9 @@ line-length = 90
 exclude = ["docs.py"]
 
 [tool.flakeheaven.plugins]
-# include everything but W503: line break before binary operator
+# include everything but
+# W503: line break before binary operator
+# E203 whitespace before ':'
 # because black does that :P
 pyflakes = ["+*"]
 pycodestyle = ["+*", "-W503"]
